--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+/backend/djsr/authentication/__pycache__/
+/backend/djsr/authentication/migrations/
+/backend/djsr/djsr/__pycache__/
